octoprint/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: octoprint
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - "octoprint.homelab.cloudbending.dev"
  rules:
    - backendRefs:
        - name: octoprint
          port: 80
